# etl-airflow

./: .env-example  .gitignore  Dockerfile  README.md  controller.py  create_data.py  currency.ipynb  dev-requirements.txt  docker-compose.yml  drive_connections.py  file_test.csv  list_dir.py  pyproject.toml  requirements.txt  test.py
.astro/: config.yaml  test_dag_integrity_default.py
.github/workflows/: ci.yaml
dags/: dag_elt.py  dag_etl.py
data/: eur_invoicing.csv  eur_revenue.csv  usd_invoicing.csv  usd_revenue.csv  wrong_data.csv  yen_invoicing.csv  yen_revenue.csv
src/: controller.py  database.py  etl.py  google_drive.py  main.py  models.py  schema.py  transform_utils.py
tests/: test_schema.py  test_schema_in.py  test_schema_out.py
