[tool.poetry]
name = "etl-airflow"
version = "0.1.0"
description = ""
authors = ["lealre <renaanvp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
google-api-python-client = "^2.125.0"
google-auth-oauthlib = "^1.2.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
faker = "^24.7.1"
load-dotenv = "^0.1.0"
sqlalchemy = "1.4.36"
pydantic = "^2.6.4"
psycopg2-binary = "^2.9.9"
duckdb = "^0.10.1"
fsspec = "^2024.3.1"
apache-airflow = "^2.8.4"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
